fix css alignment bug

--- a/app/styles/templates/components/_custom_radio_button.scss
+++ b/app/styles/templates/components/_custom_radio_button.scss
@@ -10,7 +10,6 @@
     @media #{$small-only} {
       width: 15px !important;
       height: 15px !important;
-      margin-bottom: 100rem;
     }
   }
   input[type='radio']:before {
